# shap-E-Text-to-3D

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  app_image_to_3d.py  app_text_to_3d.py  client_app.py  pyproject.toml  requirements.txt
